www/app/styles/app.css
/* ... */
 
.os-btn-secondary {
  color: #ffffff;
  background: #888;
  border-color: #666;
}

.os-btn-secondary:hover, .os-btn-secondary:focus, .os-btn-secondary:active {
  color: #ffffff;
  background: #777;
  border-color: #555;
}

.os-btn-text {
  background: transparent;
  color: #428bca;
}

.os-btn-text-secondary {
  background: transparent;
  color: #a6a6a6;
}

.os-lavatar {
  border-radius: 100%;
  background: #d5d5d5;
  display: inline-block;
  text-align: center;
  color: #ffffff;
}

.os-lavatar-sm {
  height: 32px;
  width: 32px;
}

.os-lavatar-bg {
  height: 64px;
  width: 64px;
}

.os-items-group {
  width: 100%;
}

.os-items-group:after {
  content: '';
  display: block;
  clear: both;
}

.os-item {
  float: left;
  padding: 0px 15px;
}

h1.os-section-title, h2.os-section-title, h3.os-section-title,
h4.os-section-title, h5.os-section-title, h6.os-section-title {
  margin-top: 0px;
  margin-bottom: 20px;
  font-size: 20px;
}

h1.os-sub-section-title, h2.os-sub-section-title, h3.os-sub-section-title,
h4.os-sub-section-title, h5.os-sub-section-title, h6.os-sub-section-title {
  margin-top: 0px;
  margin-bottom: 10px;
  font-size: 14px;
  font-weight: bold;
}

.os-action-btns a {
  text-decoration: none;
}

.os-action-btns-md {
  font-size: 18px;
}

.os-key-values {
  list-style-type: none;
  margin: 0px 0px 20px 0px;
  padding: 0;
}

.os-key-values:after {
  content: '';
  display: block;
  clear: both;
}

.os-key-values .item {
  margin: 2px 0px 0px 0px;
  /*float: left;*/
  position: relative;
  padding-left: 150px;
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid-column;
  display: table;
}

.os-key-values.bg-col .item {
  padding-left: 300px;
}

.os-key-values.md-col .item {
  padding-left: 250px;
}

.os-kv-vertical .os-key-values .item {
  float: none;
  padding-left: 0px;
}

.os-one-col > .item {
  width: 100%;
}

.os-key-values.os-two-cols {
  column-count: 2;
  -webkit-perspective: 1;
}

/*.os-two-cols > .item {
  width: 50%;
}*/

.os-line-section >.key:after {
  content: '';
  display: block;
  margin-top: -10px;
  margin-bottom: 20px;
  border: 0;
  border-top: 1px solid ;
  border-color: #E6E6E6;
}

.os-line-section >.key {
  background: #ffffff;
}

.os-section-divider {
  border-top: 1px solid #ddd;
  font-weight: bold;
  color: #959595;
  margin-top: 30px;
  margin-bottom: 20px;
  font-size: 12px;
  padding-top: 5px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.os-key-values .item .key, .os-key-values .item .value {
  /*word-wrap: break-word;
  word-break: break-word;*/
  overflow: hidden;
  /*white-space: nowrap;*/
  text-overflow: ellipsis;
  padding: 2px 5px 2px 5px;
  line-height: 24px;
  width: 100%;
  float: left;
}

.os-key-values .item .key {
  color: #707070;
  font-weight: normal;
  clear: left;
  margin-left: -150px;
  width: 150px;
}

.os-key-values.md-col .item .key {
  margin-left: -250px;
  width: 250px;
}

.os-key-values.bg-col .item .key {
  margin-left: -300px;
  width: 300px;
}

.os-kv-vertical .os-key-values .item .key {
  float: none;
  margin-left: 0px;
  width: 100%;
  display: block;
}

.os-kv-vertical .os-key-values .item .value {
  float: none;
  width: 100%;
  display: block;
}

.popover .os-key-values {
  margin-bottom: 0px;
}

.os-activity-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.os-activity-list .os-activity {
  margin-bottom: 15px;
}

.os-activity-list .os-activity .title {
  font-size: 14px;
}

.os-activity-list .os-activity .info {
  font-size: 12px;
  color: #707070;
}

.os-btn-section-collapse {
  float: left;
  margin: -4px 0px 0px -15px;
  color: #707070;
}

.os-btn-transparent {
  background: none;
  border: none;
  padding-left: 0px;
  padding-right: 0px;
}

.os-btn-transparent:focus {
  outline: 0;
}

.os-section {
  margin-bottom: 20px;
}

.os-section pre {
  background: transparent;
  border: none;
  font: inherit;
  font-size: inherit;
  padding: 0px;
  margin-bottom: 0px;
}

.os-line-section .os-btn-section-collapse {
  padding-top: 3px;
} 

.btn-xs.os-btn-icon {
  padding: 0px 4px!important;
  font-size: 11px;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
  background-color: #428bca;
  color: #ffffff;
}

.os-left-align {
  text-align: left;
}

.os-right-align {
  text-align: right;
}

.os-input-addon-grp {
  position: relative;
}

.os-input-addon-right, .os-input-addon-left {
  position: absolute;
  top: 0px;
  background: #eee;
  color: #707070;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.os-input-addon-right {
  right: 0px;
}

.os-input-addon-left {
  left: 0px;
}

.os-form-err-msg.ng-inactive {
  display: none;
}

.alert.os-lean-box {
  padding: 5px 15px;
}

.alert.os-form-err-msg {
  margin: 5px 0px 0px 0px;
  padding: 7px 15px;
  position: relative;
}

.alert.os-form-err-msg:after {
  position: absolute;
  top: -10px;
  content: "";
  left: 20px;
  border-style: solid;
  border-width: 5px;
}

.alert-warning.os-form-err-msg:after {
  border-color: transparent transparent #faebcc;
}

.alert-danger.os-form-err-msg:after {
  border-color: transparent transparent #ebccd1;
}

#loading-bar .bar {
  background: #b91f1f!important;
  top: 40px!important;
  height: 3px!important;
}

#loading-bar .peg {
  box-shadow: 0 0 10px #b91f1f, 0 0 5px #b91f1f;
  height: 3px!important;
}

#loading-bar-spinner {
  display: none; /* For now disabled */
}

.os-panel-footer {
  padding: 10px 15px;
  background: #f5f5f5;
  margin: 0px -15px -15px -15px;
  border-top: 1px solid #ddd;
}

.os-panel-footer:after {
  content: '';
  clear: both;
  display: block;
}

.os-divider {
  width: 100%;
  border-top: 1px solid #ddd;
  margin-bottom: 20px;
}

.dropdown-menu li.divider:first-child,
.dropdown-menu li.divider + li.divider {
  display: none;
}

.os-enable-on-hover .os-action-btns {
  display: none;
  position: absolute;
  right: 0;
}

.os-enable-on-hover:hover .os-action-btns {
  display: inline-block;
  z-index: 2;
}
/* ... */

